Refactor: 댓글 읽기 조립 책임 공통화